--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,8 @@
+# https://flake8.pycqa.org/en/latest/user/configuration.html
 [flake8]
-max-line-length = 80
-ignore = F123, E456
-exclude = file_to_exclude.py
+max-line-length = 120
+# ignore = F123, E456
+exclude =
+	.git,
+	__pycache__,
+	output,
